[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menus/Editor/TDMspawnEditor.gd" type="Script" id=1]
[ext_resource path="res://controls/JoyStickx.tscn" type="PackedScene" id=2]
[ext_resource path="res://font_s28.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menus/Editor/CT_icon.png" type="Texture" id=4]
[ext_resource path="res://Menus/Editor/T_icon.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/red_btn.tres" type="StyleBox" id=6]
[ext_resource path="res://Fonts/ARIALBD.TTF" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 18
use_filter = true
font_data = ExtResource( 7 )

[node name="TDMspawnEditor" type="Node"]
script = ExtResource( 1 )

[node name="uiLayer" type="CanvasLayer" parent="."]

[node name="ItemList" type="ItemList" parent="uiLayer"]
anchor_left = 0.35
anchor_top = 0.696
anchor_right = 0.627
anchor_bottom = 0.933
margin_left = -3.05176e-05
margin_top = -0.120026
margin_right = 0.439941
margin_bottom = 0.23999
custom_fonts/font = ExtResource( 3 )
items = [ "Terrorist", ExtResource( 5 ), false, "Counter Terrorist", ExtResource( 4 ), false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="uiLayer" instance=ExtResource( 2 )]
anchor_left = 0.803
anchor_top = 0.693
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.159912
margin_top = 0.039978
margin_right = 0.0
margin_bottom = 0.0

[node name="spawn_option" type="Panel" parent="uiLayer"]
visible = false
anchor_right = 0.158
anchor_bottom = 0.076
margin_right = -0.240005
margin_bottom = 56.28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="uiLayer/spawn_option"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.5
margin_top = -24.0
margin_right = 87.5
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_delete" type="Button" parent="uiLayer/spawn_option/VBoxContainer"]
margin_right = 175.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 3 )
text = "Delete"

[node name="saveNExit" type="Button" parent="uiLayer"]
anchor_left = 0.851
anchor_top = 0.023
anchor_right = 0.983
anchor_bottom = 0.101
margin_left = 0.577393
margin_top = 0.0726128
margin_right = 0.617432
margin_bottom = -0.0873871
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 1 )
text = "Save and Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="editorSpawns" type="Node" parent="."]

[node name="spawns" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
[connection signal="item_selected" from="uiLayer/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="Joystick_Updated" from="uiLayer/Joystick" to="." method="_on_Joystick_Joystick_Updated"]
[connection signal="pressed" from="uiLayer/spawn_option/VBoxContainer/spawn_delete" to="." method="_on_spawn_delete_pressed"]
[connection signal="pressed" from="uiLayer/saveNExit" to="." method="_on_saveNExit_pressed"]
